# rent

./: README.md  angular.json  package-lock.json  package.json
backend/: README.md  pyproject.toml
backend/backend/: main.py
src/: biome.json  index.html  styles.scss
src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
src/app/core/models/classes/: bar-chart.ts  chart.ts  line-chart.ts  my-chart.ts  pie-chart.ts
src/app/core/models/enums/: enum-chart.ts
src/app/core/models/interfaces/: it-chart.ts  it-my-chart.ts
src/app/core/models/types/: config-chart.ts  type-chart.ts
src/app/features/: feature-route.ts
src/app/features/financial-investment/: financial-investment.component.html  financial-investment.component.spec.ts  financial-investment.component.ts
src/app/features/monitoring/: monitoring.component.html  monitoring.component.ts
src/app/features/rent/: rent.component.html  rent.component.scss  rent.component.ts
src/app/features/sign-in/: sign-in.component.html
src/app/features/sign-up/: sign-up.component.html
src/app/ui/button/: button.component.html  button.component.ts
src/app/ui/chart/: chart.component.html  chart.component.ts  chart.service.spec.ts
src/app/ui/reusable-form/: reusable-form.component.html  reusable-form.component.ts
src/app/ui/sidenav/: sidenav.component.html  sidenav.component.ts
