[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alexsky347"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
yfinance = "^0.2.48"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "backend.main:start"
